--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container-fluid">
       <div class="row align-items-center">
         <div class="col">
-          <h1>Nairobi Airport transfers, pick up and drop off - jomo Kenyatta international airport, Kenya – Wilson Airport Transfers </h1>
+          <h1>Nairobi Airport transfers </h1>
         </div>
         <div class="col text-end">
           <strong>
@@ -183,7 +183,7 @@
       </div>
     </section>
     <br>
-    <section class="row" style="background-image: url('wide view.jpg'); background-size: 100% 100%; background-repeat: no-repeat; color:white;">
+    <section class="row" style="background-image: url('2242213879_b57abdf996_c.jpg'); background-size: 100% 100%; background-repeat: no-repeat; color:white;">
       <div class="col-md-12" style="background-color:rgba(0, 0, 0, 0.5);">
         <h2>Jomo Kenyatta International Airport Information</h2>
         <p style="text-align:justify;">
@@ -202,7 +202,7 @@
       </div>
     </section>
     <hr class="hr">    
-    <section class="row" style="background-image: url('2.jpg'); background-size: 100% 100%; background-repeat: no-repeat; color:white;">
+    <section class="row" style="background-image: url('Screenshot 2024-02-20 185528 12.jpg'); background-size: 100% 100%; background-repeat: no-repeat; color:white;">
 
       <div class="col-md-6" style="background-color:rgba(0, 0, 0, 0.5);">
         <h2><h2>Nairobi Airport Arrivals  </h2>
@@ -266,34 +266,34 @@
                 <br>
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="2.jpg" class="d-block w-100" alt="Gallery Image 1">
-                    <p>Arival</p>
+                    <img src="10.jpg" class="d-block w-100" alt="Gallery Image 1">
+                    <p></p>
                   </div>
                   <div class="col-md-4">
-                    <img src="1.jpg" class="d-block w-100" alt="Gallery Image 2">
-                    <p>passengers</p>
+                    <img src="52580580918_38d44fb99e_c 17.jpg" class="d-block w-100" alt="Gallery Image 2">
+                    <p></p>
                   </div>
                   <div class="col-md-4">
                     
                     <img src="12978548_ZxHCm7ujaCoIXyh0orCHqUm8FajCbSmBTxLHPlS0rrg.jpg" class="d-block w-100" alt="Gallery Image 3">
-                    <p> Plane</p>
+                    <p> </p>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <h2>Virtual tour</h2>
+                <h2></h2>
                 <br>
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="Buggage-Service3-350x500-3.jpg" class="d-block w-100" alt="Gallery Image 4">
+                    <img src="8685539667_71ca544e27_c 12.jpg" class="d-block w-100" alt="Gallery Image 4">
                     <p></p>
                   </div>
                   <div class="col-md-4">
-                    <img src="JKIA-T131-350x500-1.jpg" class="d-block w-100" alt="Gallery Image 5">
+                    <img src="Screenshot 2024-02-20 190320.jpg" class="d-block w-100" alt="Gallery Image 5">
                     <p></p>
                   </div>
                   <div class="col-md-4">
-                    <img src="WIlson-Airport4-scaled-q9gj8en949o5y8fzbrf273m4d90wjeow2mvi8rx57k.jpg" class="d-block w-100" alt="Gallery Image 6">
+                    <img src="2242213879_b57abdf996_c.jpg" class="d-block w-100" alt="Gallery Image 6">
                     <p></p>
                   </div>
                 </div>
@@ -302,11 +302,11 @@
                 <h2></h2>
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="3.jpg" class="d-block w-100" alt="Gallery Image 4">
+                    <img src="Screenshot 2024-02-20 185528 12.jpg" class="d-block w-100" alt="Gallery Image 4">
                     <p></p>
                   </div>
                   <div class="col-md-4">
-                    <img src="4.jpg" class="d-block w-100" alt="Gallery Image 5">
+                    <img src="20.jpg" class="d-block w-100" alt="Gallery Image 5">
                     <p></p>
                   </div>
                   <div class="col-md-4">
