--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section class="row">
       <div class="col-md-12 justify-content-center">
         <div style="position:relative;">
-          <img src="0.jpg" alt="Banner Image" style="width:100%; height:50vh; object-fit: cover;">
+          <img src="Screenshot 2024-02-20 185717 15.jpg.jpg" alt="Banner Image" style="width:100%; height:50vh; object-fit: cover;">
           
         </div>
       </div>
