--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container-fluid">
       <div class="row align-items-center">
         <div class="col">
-          <h1>Nairobi Airport transfers </h1>
+          <h1>Nairobi Airport Transfers </h1>
         </div>
         <div class="col text-end">
           <strong>
@@ -168,7 +168,7 @@
     <section class="row">
       <div class="col-md-12 justify-content-center">
         <div style="position:relative;">
-          <img src="Screenshot 2024-02-20 185717 15.jpg.jpg" alt="Banner Image" style="width:100%; height:50vh; object-fit: cover;">
+          <img src="Screenshot 2024-02-20 185717 15.jpg" alt="Banner Image" style="width:100%; height:50vh; object-fit: cover;">
           
         </div>
       </div>
